# Student-Health-Prediction

./: .gitignore  README.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
src/health_classifier/infrastructure/: __init__.py
src/health_classifier/modules/: __init__.py
src/health_classifier/shared/: __init__.py
