[project]
name = "student-health-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=health_classifier --cov-report=term-missing"

